[package]
name = "ftl-hole"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.21.3"
itertools = "0.10.5"
macroquad = "0.3.23"

[features]

[dev-dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
